# agentic-python-coder

./: .gitignore  LICENSE  README.md  pyproject.toml
coder/: .gitignore  pyproject.toml
coder/prompts/: system.md  system_todo.md
coder/src/agentic_python_coder/: __init__.py  agent.py  cli.py  kernel.py  llm.py  runner.py  tools.py
coder/src/agentic_python_coder/examples/clingo/sample_tasks/: diagnosis.md  simple_coloring.md  sudoku_mini.md
coder/src/agentic_python_coder/examples/cpmpy/: README.md  cpmpy.md
coder/src/agentic_python_coder/examples/cpmpy/sample_tasks/: magic_square.md
coder/src/agentic_python_coder/examples/regex/: README.md
coder/src/agentic_python_coder/examples/regex/sample_tasks/: email_extraction.md
coder/src/coder/: __init__.py  agent.py  cli.py  context.py  kernel.py  llm.py  project_md.py  tools.py
examples/clingo/: README.md  clingo.md  clingo_todo.md
examples/clingo/sample_tasks/: bird_reasoning.md  stable_marriage.md
examples/cpmpy/: README.md  cpmpy.md  cpmpy_todo.md
examples/cpmpy/sample_problems/: n_queens.md
examples/regex/: regex.md
examples/regex/sample_tasks/: phone_validation.md  url_parsing.md
