[project]
name = "agentic-python-coder"
version = "1.3.2"
description = "A lightweight Python coding agent that writes, executes, and iterates on code through natural language instructions"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "Stefan Szeider"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "coding", "agent", "llm", "code-generation", "automation"]
dependencies = [
    "langgraph>=0.6.8",
    "langchain-core>=0.3.78",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.21",
    "langchain-experimental>=0.3.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "jupyter-client>=8.6.3",
    "ipykernel>=6.30.1",
    "PyYAML>=6.0.3",
]

[project.scripts]
coder = "coder.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
]
dev = [
    "ruff>=0.13.3",
    "mypy>=1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coder/src/coder"]

[tool.hatch.build.targets.wheel.force-include]
"coder/prompts" = "coder/prompts"
"examples/cpmpy/cpmpy.md" = "examples/cpmpy/cpmpy.md"
"examples/cpmpy/README.md" = "examples/cpmpy/README.md"
"examples/cpmpy/sample_problems" = "examples/cpmpy/sample_problems"
"examples/clingo/clingo.md" = "examples/clingo/clingo.md"
"examples/clingo/README.md" = "examples/clingo/README.md"
"examples/clingo/sample_tasks" = "examples/clingo/sample_tasks"

[tool.pytest.ini_options]
pythonpath = ["coder/src"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["CPBENCH", "LOCAL", "TRASH", "examples"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true


