[project]
name = "agentic-python-coder"
version = "0.1.0"
description = "A lightweight Python coding agent that writes, executes, and iterates on code through natural language instructions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.2",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-anthropic>=0.3.0",
    "langchain-experimental>=0.3.4",
    "python-dotenv>=1.1.1",
    "rich>=13.0.0",
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
coder = "coder.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coder"]

[tool.pytest.ini_options]
pythonpath = ["src"]

